# ProjetoCRUD

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  crud.py  main.py  router.py  schemas.py
backend/databases/: database.py
backend/models/: product.py
frontend/: Dockerfile  app.py
